heading  issue on mobile screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -373,7 +373,9 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 575px) {
   #hero h1 {
-    font-size: 40px;
+    font-family: Tangerine;
+    font-size: 60px;
+    margin-top: 40%;
   }
   #hero h2 {
     text-align: center;
